<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="fr.gsb.rv.MainActivity">

    <TextView
        android:id="@+id/tvErreur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textValide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etMatricule" />

    <EditText
        android:id="@+id/etMatricule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/etMdp" />

    <EditText
        android:id="@+id/etMdp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bValider"
        android:onClick="seConnecter"/>

    <Button
        android:id="@+id/bAnnuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bAnnuler"
        android:onClick="annuler"/>

</LinearLayout>